--- a/index.html
+++ b/index.html
@@ -1,26 +1,45 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
     <head>
-        <title>VR App</title>
-        <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-        <script src="https://unpkg.com/aframe-physics-system@1.4.0/dist/aframe-physics-system.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <link rel="stylesheet" href="main.css" />
+        <title>My A-Frame Scene</title>
+        <script src="https://aframe.io/releases/0.4.0/aframe.min.js"></script>
+        <script src="https://unpkg.com/aframe-look-at-component@0.5.1/dist/aframe-look-at-component.min.js"></script>
     </head>
-    <body class="a-body " data-gr-c-s-loaded="true">
-        <a-scene physcis="" class="fullscreen" canvas="" inspector="" keyboard-shortcuts="" screenshot="" vr-mode-ui="">
-            <a-plane static-body="sphereRadius:NaN" position="0 0 -4" rotation="-90 0 0" width="100" height="100" color="white" material="" geometry=""></a-plane>
-            <a-sky color="#87ceeb" material="" geometry=""></a-sky>
-            <a-assets>
-                <a-asset-item id="mtl" src="./hallway/materials.mtl"></a-asset-item>
-                <a-asset-item id="obj" src="./hallway/model.obj"></a-asset-item>
-            </a-assets>
-            <a-camera id="camera" position="-0.9872499373774682 3.6 -4.074247801439871" cursor-visible="true" cursor-scale="2" cursor-color="#0095DD" cursor-opacity="0.5" rotation="0.3437746770784999 -0.4583662361046077 0" camera="" look-controls="" wasd-controls=""></a-camera>
-            <a-entity id="building" obj-model="obj:./hallway/model.obj;mtl:./hallway/materials.mtl" shadow="receive:false" position="0 4 -5" scale="5 5 5"></a-entity>
-            <a-entity environment="shadow: true; shadowSize: 10; preset:default;"></a-entity>
-        </a-scene>
 
-        <!-- Code injected by live-server -->
-        <script src="main.js"></script>
-        <a style="display: none;"></a>
+    <!-- ToDo:
+            Get pictures of the sky (We could have a white background), 3 door-backgrounds, and maybe a floor.
+
+            Use something to measure a person's heartrate. (Samsung phone)
+            Use focus
+
+    -->
+
+    <body>
+        <a-scene>
+            <a-entity position="0 0 3">
+                <a-camera id="theCamera">
+                    <a-cursor></a-cursor>
+                </a-camera>
+            </a-entity>
+            <a-sky src='./assets/sky.jpg'></a-sky>
+            <a-entity class="door" geometry="primitive: box" scale="0.5 1 0.05" material="src: url(./assets/animatedForest.gif)"
+                look-at="[camera]" position="-1 1.5 2" rotation="30 0 0" cursor-listener>
+            </a-entity>
+            <a-entity class="door" geometry="primitive: box" scale="0.5 1 0.05" material="src: url(./assets/grandcangif.gif)"
+                look-at="[camera]" position="0 1.5 1.5" cursor-listener>
+            </a-entity>
+            <a-entity class="door" geometry="primitive: box" scale="0.5 1 0.05" material="src: url(./assets/snowygif.gif)"
+                look-at="[camera]" position="1 1.5 2" rotation="-30 0 0" cursor-listener>
+            </a-entity>
+        </a-scene>
     </body>
+        <script>
+            // Component to cause a console log clicked when it's clicked
+            AFRAME.registerComponent('cursor-listner', {
+                init: function () {
+                    this.el.addEventListener('click', function () {
+                        console.log('CLICK! Door');
+                    });
+                }
+            });
+        </script>
 </html>
